refactor: 전반적인 리팩토링

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ h1 {
   text-align: center;
 }
 
-.hangman-img-container {
+.hangman-img {
   text-align: center;
   margin: 20px 0;
   position: relative;
