feat: 목숨 개수에 따른 이미지 변경 기능 구현

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.hangman-img {
+.image-container {
   text-align: center;
   margin: 20px 0;
   position: relative;
@@ -16,7 +16,7 @@
   margin: 0 5px;
 }
 
-.hangman-image {
+.image {
   top: 0;
   left: 0;
   width: 100%;
