--- a/css/basic.css
+++ b/css/basic.css
@@ -17,3 +17,16 @@ body {
 h1 {
     text-align: center;
 }
+
+.image-container {
+    text-align: center;
+    margin: 20px 0;
+    position: relative;
+}
+
+.image {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+}
