--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
     gap: 20px;
 }
 
-.answer {
+.answer-candidate {
     width: calc(33% - 20px);
     height: 150px;
     background-color: #f1f1f1;
@@ -15,7 +15,7 @@
     align-items: center;
 }
 
-.answer p {
+.answer-candidate p {
     font-size: 16px;
     font-weight: bold;
     color: #333333;
